Fixed bug #43377 (PHP crashes with invalid argument for DateTimeZone)