ext/date/php_date.c
@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: php_date.c,v 1.43.2.45.2.51.2.2 2007/10/07 05:22:04 davidw Exp $ */
+/* $Id: php_date.c,v 1.43.2.45.2.51.2.3 2007/11/23 00:15:24 iliaa Exp $ */
 
 #include "php.h"
 #include "php_streams.h"
@@ -2066,6 +2066,8 @@ PHP_METHOD(DateTimeZone, __construct)
 	if (SUCCESS == zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "s", &tz, &tz_len)) {
 		if (SUCCESS == timezone_initialize(&tzi, tz TSRMLS_CC)) {
 			((php_timezone_obj *) zend_object_store_get_object(getThis() TSRMLS_CC))->tz = tzi;
+		} else {
+			ZVAL_NULL(getThis());
 		}
 	}
 	php_set_error_handling(EH_NORMAL, NULL TSRMLS_CC);
